# PyContext

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  main_layered.py  pyproject.toml  requirements.txt  setup.py
application/: __init__.py  ecommerce_workflows.py  financial_workflows.py  healthcare_workflows.py  ml_workflows.py  utils.py  workflow_steps.py
domain/: __init__.py  entities.py  repositories.py
examples/: __init__.py  multi_domain_demo.py
infrastructure/: __init__.py  persistence.py
services/: __init__.py  message_queue.py  workflow_engine.py
tests/integration/: test_workflow_execution.py
tests/unit/: test_entities.py
