[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pycontext-workflow"
version = "1.0.0"
description = "A professional workflow engine with priority-based execution and checkpoint resumption"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PyContext Contributors", email = "your.email@example.com"}
]
maintainers = [
    {name = "PyContext Contributors", email = "your.email@example.com"}
]
keywords = ["workflow", "engine", "priority", "checkpoint", "async", "orchestration"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "pydantic>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.18.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/yourusername/pycontext"
Documentation = "https://github.com/yourusername/pycontext/docs"
Repository = "https://github.com/yourusername/pycontext"
"Bug Tracker" = "https://github.com/yourusername/pycontext/issues"
Changelog = "https://github.com/yourusername/pycontext/blob/main/CHANGELOG.md"

[project.scripts]
pycontext-demo = "main_layered:main"

[tool.setuptools.packages.find]
include = ["domain*", "infrastructure*", "services*", "application*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
asyncio_mode = "auto"